tests/snapshots/trait_adaptation_tests__basic_trait_use.snap
---
source: tests/trait_adaptation_tests.rs
expression: program
---
Program {
    statements: [
        Class {
            attributes: [],
            modifiers: [],
            name: Token {
                kind: Identifier,
                span: Span {
                    start: 12,
                    end: 19,
                },
            },
            extends: None,
            implements: [],
            members: [
                TraitUse {
                    attributes: [],
                    traits: [
                        Name {
                            parts: [
                                Token {
                                    kind: Identifier,
                                    span: Span {
                                        start: 30,
                                        end: 37,
                                    },
                                },
                            ],
                            span: Span {
                                start: 30,
                                end: 37,
                            },
                        },
                    ],
                    adaptations: [],
                    doc_comment: None,
                    span: Span {
                        start: 26,
                        end: 40,
                    },
                },
            ],
            doc_comment: None,
            span: Span {
                start: 6,
                end: 40,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 40,
    },
}
