tests/snapshots/trait_adaptation_tests__multiple_trait_use.snap
---
source: tests/trait_adaptation_tests.rs
expression: program
---
Program {
    statements: [
        Class {
            attributes: [],
            modifiers: [],
            name: Token {
                kind: Identifier,
                span: Span {
                    start: 12,
                    end: 19,
                },
            },
            extends: None,
            implements: [],
            members: [
                TraitUse {
                    attributes: [],
                    traits: [
                        Name {
                            parts: [
                                Token {
                                    kind: Identifier,
                                    span: Span {
                                        start: 30,
                                        end: 36,
                                    },
                                },
                            ],
                            span: Span {
                                start: 30,
                                end: 36,
                            },
                        },
                        Name {
                            parts: [
                                Token {
                                    kind: Identifier,
                                    span: Span {
                                        start: 38,
                                        end: 44,
                                    },
                                },
                            ],
                            span: Span {
                                start: 38,
                                end: 44,
                            },
                        },
                        Name {
                            parts: [
                                Token {
                                    kind: Identifier,
                                    span: Span {
                                        start: 46,
                                        end: 52,
                                    },
                                },
                            ],
                            span: Span {
                                start: 46,
                                end: 52,
                            },
                        },
                    ],
                    adaptations: [],
                    doc_comment: None,
                    span: Span {
                        start: 26,
                        end: 55,
                    },
                },
            ],
            doc_comment: None,
            span: Span {
                start: 6,
                end: 55,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 55,
    },
}
