tests/snapshots/trait_adaptation_tests__trait_alias_with_visibility_and_name.snap
---
source: tests/trait_adaptation_tests.rs
expression: program
---
Program {
    statements: [
        Class {
            attributes: [],
            modifiers: [],
            name: Token {
                kind: Identifier,
                span: Span {
                    start: 12,
                    end: 19,
                },
            },
            extends: None,
            implements: [],
            members: [
                TraitUse {
                    attributes: [],
                    traits: [
                        Name {
                            parts: [
                                Token {
                                    kind: Identifier,
                                    span: Span {
                                        start: 30,
                                        end: 37,
                                    },
                                },
                            ],
                            span: Span {
                                start: 30,
                                end: 37,
                            },
                        },
                    ],
                    adaptations: [
                        Alias {
                            method: TraitMethodRef {
                                trait_name: None,
                                method: Token {
                                    kind: Identifier,
                                    span: Span {
                                        start: 48,
                                        end: 51,
                                    },
                                },
                                span: Span {
                                    start: 48,
                                    end: 51,
                                },
                            },
                            alias: Some(
                                Token {
                                    kind: Identifier,
                                    span: Span {
                                        start: 65,
                                        end: 68,
                                    },
                                },
                            ),
                            visibility: Some(
                                Token {
                                    kind: Protected,
                                    span: Span {
                                        start: 55,
                                        end: 64,
                                    },
                                },
                            ),
                            span: Span {
                                start: 48,
                                end: 69,
                            },
                        },
                    ],
                    doc_comment: None,
                    span: Span {
                        start: 26,
                        end: 77,
                    },
                },
            ],
            doc_comment: None,
            span: Span {
                start: 6,
                end: 77,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 77,
    },
}
