tests/snapshots/trait_adaptation_tests__trait_alias_with_visibility_only.snap
---
source: tests/trait_adaptation_tests.rs
expression: program
---
Program {
    statements: [
        Class {
            attributes: [],
            modifiers: [],
            name: Token {
                kind: Identifier,
                span: Span {
                    start: 12,
                    end: 19,
                },
            },
            extends: None,
            implements: [],
            members: [
                TraitUse {
                    attributes: [],
                    traits: [
                        Name {
                            parts: [
                                Token {
                                    kind: Identifier,
                                    span: Span {
                                        start: 30,
                                        end: 37,
                                    },
                                },
                            ],
                            span: Span {
                                start: 30,
                                end: 37,
                            },
                        },
                    ],
                    adaptations: [
                        Alias {
                            method: TraitMethodRef {
                                trait_name: None,
                                method: Token {
                                    kind: Identifier,
                                    span: Span {
                                        start: 48,
                                        end: 51,
                                    },
                                },
                                span: Span {
                                    start: 48,
                                    end: 51,
                                },
                            },
                            alias: None,
                            visibility: Some(
                                Token {
                                    kind: Private,
                                    span: Span {
                                        start: 55,
                                        end: 62,
                                    },
                                },
                            ),
                            span: Span {
                                start: 48,
                                end: 63,
                            },
                        },
                    ],
                    doc_comment: None,
                    span: Span {
                        start: 26,
                        end: 71,
                    },
                },
            ],
            doc_comment: None,
            span: Span {
                start: 6,
                end: 71,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 71,
    },
}
